# tuning-playground

./: CMakeLists.txt  README.md  go.sh
benchmarks/: CMakeLists.txt
benchmarks/deep_copy/: CMakeLists.txt  deep_copy.cpp
benchmarks/idk_just_multiply_matrices/: CMakeLists.txt  idk_just_multiply_matrices.cpp
benchmarks/mm2d_large_all/: CMakeLists.txt  mm2d_large_all.cpp
benchmarks/mm2d_large_nthreads/: CMakeLists.txt  mm2d_large_nthreads.cpp
benchmarks/mm2d_large_schedule/: CMakeLists.txt  mm2d_large_schedule.cpp
benchmarks/mm2d_large_tilling/: CMakeLists.txt  mm2d_large_tilling.cpp
benchmarks/occupancy/: CMakeLists.txt  occupancy.cpp
benchmarks/scheduling_test/: CMakeLists.txt  scheduling_test.cpp
benchmarks/simple_features/: CMakeLists.txt  simple_features.cpp
benchmarks/simple_mdrange/: CMakeLists.txt  simple_mdrange.cpp
benchmarks/tune_mm_all/: CMakeLists.txt  tune_mm_all.cpp
benchmarks/tune_mm_nthreads/: CMakeLists.txt  tune_mm_nthreads.cpp
benchmarks/tune_mm_schedule/: CMakeLists.txt  tune_mm_schedule.cpp
benchmarks/tune_mm_tilling/: CMakeLists.txt
benchmarks/two_var/: CMakeLists.txt  two_var.cpp
examples/: cleanup.sh
examples/mm2d_large_all/: mm2d_large_all.sh  sourceme.sh
examples/mm2d_large_nthreads/: mm2d_large_nthreads.sh  sourceme.sh
examples/mm2d_large_schedule/: mm2d_large_schedule.sh  sourceme.sh
examples/mm2d_large_tilling/: mm2d_large_tilling.sh  sourceme.sh
src/: tuning_playground.hpp
tuning_scripts/tune_mm_all/: tune_mm_all.sh
tuning_scripts/tune_mm_nthreads/: tune_mm_nthreads.sh
tuning_scripts/tune_mm_schedule/: tune_mm_schedule.sh
tuning_scripts/tune_mm_tilling/: tune_mm_tilling.sh
