add_subdirectory(deep_copy)
add_subdirectory(idk_just_multiply_matrices)
#add_subdirectory(simple_mdrange)
add_subdirectory(simple_features)
add_subdirectory(two_var)
add_subdirectory(mm2d)
add_subdirectory(mm2d_large_nthreads)
add_subdirectory(mm2d_large_tilling)
add_subdirectory(mm2d_large_schedule)
add_subdirectory(mm2d_large_all)
#add_subdirectory(occupancy)
